@@ -31,6 +31,7 @@
     <Reference Include="System" />
     <Reference Include="nunit.framework, Version=2.2.0.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\cumberland\Cumberland.csproj">
@@ -49,6 +50,7 @@
     <Compile Include="MapTests.cs" />
     <Compile Include="LineTests.cs" />
     <Compile Include="MapSerializerTests.cs" />
+    <Compile Include="DBaseIIITests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shape_eg_data\mexico\cities.dbf" />
