@@ -32,6 +32,7 @@
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
@@ -56,6 +57,7 @@
     <Compile Include="Xml\Serialization\MapSerializer.cs" />
     <Compile Include="Data\IFileFeatureSource.cs" />
     <Compile Include="Data\IDatabaseFeatureSource.cs" />
+    <Compile Include="Data\Shapefile\DBaseIIIFile.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
